# MATH5543_final

./: README.md  best_practice.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/area/: circle.py
src/fdm/: Burgers.py  crank_nicolson.py  visualization.py
tests/: conftest.py  test_Burgers.py  test_circle.py  test_crank_nicolson.py  test_problem1.py  test_problem3.py
