[metadata]
name = fdm
description = finite difference toolbox
author = zomorodiyan
license = WTFPL
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    fdm
install_requires =
    numpy>=1.21
    matplotlib>=3.5
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
fdm = py.typed

[flake8]
ignore = W605,W504
max-line-length = 160
